--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'United States -- Description and travel'
 - !lcc 'E151'
+- GITenberg
 tableOfContents: New-Yorkissa -- Pääpiirteet Washingtonin naiskokouksesta -- Orjuuden
   ajoilta -- Spiritistit ja salaperäisyyden harrastus Philadelphiassa -- Niagara --
   Ole Bullin ja Longfellowin kodit -- Mark Twainin seurassa -- Harriet Beecher Stowe
